--- a/.github/workflows/custom-actions.yml
+++ b/.github/workflows/custom-actions.yml
@@ -7,6 +7,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Get Code
+        uses: actions/checkout@v3
       - name: Load & cache dependencies
         uses: ./.github/actions/cached-deps
       - name: Output a sentence
